src/objects/Market_Insight__kav.object
<CustomObject><fields>
        <fullName>Approval_Queue__c</fullName>
        <description>Approving Office</description>
        <inlineHelpText>Approving Office</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Global Markets</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Atom Approver</description>
        <inlineHelpText>Atom Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Market_Insights</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Atom__c</fullName>
        <description>Body of Market Insight Article</description>
        <inlineHelpText>This rich-text area is where the body of your content should be placed. The content should not deviate from the overall theme and should stand on its own as a reliable source of information. Otherwise, a new topic should be created. (Max Length - 131,072)</inlineHelpText>
        <label>Atom</label>
        <length>131072</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version is ready for approval</description>
        <inlineHelpText>Check this box, if your document is ready to go into workflow. If you're completely satisfied with your draft, then click "Submit for Approval" button.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Level_0__c</fullName>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Market Insight</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mobile_Title__c</fullName>
        <description>This is the title that will show on mobile sites</description>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_URL__c</fullName>
        <formula>HYPERLINK($Label.export_gov&amp;"/article?id="&amp;UrlName, $Label.export_gov&amp;"/article?id="&amp;UrlName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>References__c</fullName>
        <defaultValue>"Prepared by our U.S. Embassies abroad.  With its network of 108 offices across the United States and in more than 75 countries, the U.S. Commercial Service of the U.S. Department of Commerce utilizes its global presence and international marketing expertise to help U.S. companies sell their products and services worldwide. Locate the U.S. Commercial Service trade specialist in the U.S. nearest you by visiting http://export.gov/usoffices."</defaultValue>
        <description>Market Insight Article references</description>
        <inlineHelpText>If there are any references that were used during the writing of the content, they can be highlighted here. The rich text editor allows for formatting and link creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to relate articles to specific series</description>
        <inlineHelpText>Type a keyword, such as country name and click the magnifying glass to search available Series.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Market Insight</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Market Insights</relationshipLabel>
        <relationshipName>Market_Insights</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Market Insights</relationshipLabel>
        <relationshipName>Market_Insights</relationshipName>
        <type>Lookup</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Input form for Market Insights Articles</description><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><label>Market Insight</label><pluralLabel>Market Insights</pluralLabel><validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules></CustomObject>